--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = janelia-arduino/TMC2209@^9.0.6
+;lib_deps = janelia-arduino/TMC2209@^9.0.6
