--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = janelia-arduino/TMC2209@^9.0.6
+lib_deps = 
+	;teemuatlut/TMCStepper@^0.7.3
+	waspinator/AccelStepper@^1.64
+git add .
+add ...
