--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,4 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 9600
-lib_deps = 
-	;teemuatlut/TMCStepper@^0.7.3
-	waspinator/AccelStepper@^1.64
-
+lib_deps = waspinator/AccelStepper@^1.64
