Ajout TMC2209 UART

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_speed = 9600
+monitor_speed = 11520
 lib_deps = waspinator/AccelStepper@^1.64
+  teemuatlut/TMCStepper @ ^0.7.3
+  mikalhart/Streaming @ ^1.0.0
+
