--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-monitor_speed = 11520 de clang
+monitor_speed = 115200
 lib_deps = waspinator/AccelStepper@^1.64
   teemuatlut/TMCStepper @ ^0.7.3
   mikalhart/Streaming @ ^1.0.0
